# RL

./: .coderabbit-current.yaml  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .testmondata-shm  .testmondata-wal  1000336-attach.sh  1001896-attach.sh  1014588-attach.sh  10689181-attach.sh  10689832-attach.sh  2379682-attach.sh  2382560-attach.sh  2387714-attach.sh  2389648-attach.sh  2391178-attach.sh  2391922-attach.sh  9153612-attach.sh  9239646-attach.sh  9239676-attach.sh  9240549-attach.sh  9261863-attach.sh  961254-attach.sh  961259-attach.sh  962390-attach.sh  990502-attach.sh  999283-attach.sh  AGENTS.md  CODING_GUIDELINES.md  CONTRIBUTING.md  CROSS_TOKENIZER_README.md  FP8_ABLATION_RESULTS.md  FUSEDATTN_EXPERIMENT_LOG_B200.md  FUSEDATTN_TEST_REPORT.md  FUSEDATTN_TEST_REPORT_B200.md  GB200_GRPO_test.json  GPT_OSS_REPRODUCTION.md  INSTRUCTIONS.md  ISSUE_vllm_020_regressions.md  (+190 more)
docs/: Makefile  PRD-Architecture-Refactoring.md  adding-new-models.md  broken_links_false_positives.json  broken_links_needing_review.json  ci-cd.md  cluster.md  conf.py  debugging.md  docker.md  eval_checkpoint_fix_guide.md  fp8.md  fused-linear-cross-entropy-configuration.md  fused-linear-cross-entropy-integration.md  grpo32b_eagle3_resume_context_2026-02-28.md  index.md  local-workstation.md  lpu-intro-gpu-baseline-temp1-specdec-2026-02-18.md  merge-queue-auto-retry.md  migration.md  model-quirks.md  nano3_w4a4_nan_amax_debug.md  nsys-profiling.md  performance-summary.md  project.json  pyproject.toml  quickstart.md  r3_validation.md  refit-shrink-scaling-results.md  (+31 more)
(+4567 files in other folders)
