[project]
name = "nrl-k8s"
version = "0.1.0"
description = "CLI for managing nemo-rl workloads on Kubernetes with KAI scheduler"
requires-python = ">=3.10"
dependencies = ["kubernetes>=28.0", "click>=8.0", "rich>=13.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.0"]

[project.scripts]
nrl-k8s = "nrl_k8s.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nrl_k8s"]
